force-app/main/default/objects/Vessel__c/Vessel__c.object-meta.xml
<CustomObject>
    <label>Vessel</label>
    <nameField>
        <label>Vessel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vessels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>