force-app/main/default/objects/Vessel__c/fields/Max_Draft__c.field-meta.xml
<CustomField>
    <fullName>Max_Draft__c</fullName>
    <label>Max Draft</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>