force-app/main/default/objects/Vessel__c/fields/Vessel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel Type</label>
    <referenceTo>Vessel_Type__c</referenceTo>
    <relationshipLabel>Vessels Type List</relationshipLabel>
    <relationshipName>Vessels</relationshipName>
    <type>Lookup</type>
</CustomField>